--- a/android/build.gradle
+++ b/android/build.gradle
@@ -36,5 +36,6 @@ android {
         implementation 'com.segment.analytics.android:analytics:4.7.0'
         implementation 'com.segment.analytics.android.integrations:amplitude:+'
         implementation 'com.segment.analytics.android.integrations:adjust:+'
+        implementation 'com.android.installreferrer:installreferrer:2.1'
     }
 }
