--- a/android/build.gradle
+++ b/android/build.gradle
@@ -33,7 +33,7 @@ android {
     }
 
     dependencies {
-        implementation 'com.segment.analytics.android:analytics:4.7.0'
+        implementation 'com.segment.analytics.android:analytics:4.+'
         implementation 'com.segment.analytics.android.integrations:amplitude:+'
         implementation 'com.segment.analytics.android.integrations:adjust:+'
         implementation 'com.android.installreferrer:installreferrer:2.1'
