--- a/android/build.gradle
+++ b/android/build.gradle
@@ -8,16 +8,16 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.0'
-        classpath 'com.google.gms:google-services:4.3.3'
+        classpath 'com.android.tools.build:gradle:4.1.3'
     }
 }
 
 rootProject.allprojects {
     repositories {
-        maven { url 'https://maven.google.com' }
         google()
         jcenter()
+        mavenCentral()
+        maven { url 'https://maven.google.com' }
     }
 }
 
@@ -37,10 +37,5 @@ android {
     dependencies {
         implementation 'com.segment.analytics.android:analytics:4.+'
         implementation 'com.segment.analytics.android.integrations:amplitude:+'
-        implementation 'com.segment.analytics.android.integrations:adjust:+'
-        implementation 'com.android.installreferrer:installreferrer:2.1'
-        implementation 'com.segment.analytics.android.integrations:firebase:+@aar'
     }
 }
-// Add to the bottom of the file
-apply plugin: 'com.google.gms.google-services'
